Finished Data Cleansing

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +58,14 @@
     "        \"Gd\": 4,\n",
     "        \"TA\": 3,\n",
     "        \"Fa\": 2,\n",
-    "        \"Po\": 1\n",
-    "        \"NA\": 0\n",
+    "        \"Po\": 1,\n",
+    "        \"NA\": 0,\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,117 +139,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "def get_bin_values(df, categr_fields):\n",
+    "    bin_features = {}\n",
+    "    for field in categr_fields:\n",
+    "        attrs = df[field].unique()\n",
+    "        for attr in attrs:\n",
+    "            fieldname = field + \"_\" + str(attr)\n",
+    "            bin_vec = df[field] == attr\n",
+    "            bin_features[fieldname] = bin_vec.astype(int)\n",
+    "    return bin_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"all/train.csv\")"
+    "def convert_str_values(df, eval_fields):\n",
+    "    for field, value_map in eval_fields.iteritems():\n",
+    "        tmp = []\n",
+    "        non_zeros = []\n",
+    "        for v in df[field]:\n",
+    "            if value_map.get(v):\n",
+    "                value = value_map[v]\n",
+    "                tmp.append(value)\n",
+    "                non_zeros.append(value)\n",
+    "            else:\n",
+    "                tmp.append(\"NA\")\n",
+    "        aver_v = np.average(non_zeros)\n",
+    "        # assign average value to None values\n",
+    "        value_arr = [aver_v if x==\"NA\" else x for x in tmp]\n",
+    "        df[field] = value_arr\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 60,  20,  70,  50, 190,  45,  90, 120,  30,  85,  80, 160,  75,\n",
-       "       180,  40])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[categr_fields[0]].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Pave', 'Grvl'], dtype=object)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Street'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin_features = {}"
+    "df = pd.read_csv(\"all/train.csv\")\n",
+    "bin_features = get_bin_values(df, categr_fields)\n",
+    "bin_df = pd.DataFrame.from_dict(bin_features)\n",
+    "# drop the binary features\n",
+    "df = df.drop(labels=categr_fields, axis=1)\n",
+    "# convert the other str fields\n",
+    "convert_str_values(df, eval_fields)\n",
+    "# combine with binary feature vectors\n",
+    "final_df = pd.concat([df, bin_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for field in categr_fields:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['all/test.csv.gz',\n",
-       " 'all/sample_submission.csv.gz',\n",
-       " 'all/test.csv',\n",
-       " 'all/data_description.txt',\n",
-       " 'all/train.csv',\n",
-       " 'all/train.csv.gz',\n",
-       " 'all/sample_submission.csv']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glob.glob('all/*')"
+    "final_df.to_csv(\"cleaned_data.csv\")"
    ]
   },
   {
